// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectionIndicator Gets correct color 1`] = `
.c0 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
}

<div
  className="c0"
  color={null}
/>
`;

exports[`ConnectionIndicator Gets correct color 2`] = `
.c0 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #C0392B;
  background-color: #C0392B;
}

<div
  className="c0"
  color="#C0392B"
/>
`;

exports[`ConnectionIndicator Gets correct color 3`] = `
.c0 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #F39C12;
  background-color: #F39C12;
}

<div
  className="c0"
  color="#F39C12"
/>
`;

exports[`ConnectionIndicator Gets correct color 4`] = `
.c0 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #27AE60;
  background-color: #27AE60;
}

<div
  className="c0"
  color="#27AE60"
/>
`;

exports[`ConnectionIndicator renders correctly 1`] = `
.c0 {
  min-height: 12px;
  min-width: 12px;
  margin: 10px;
  border-radius: 50%;
  color: #27AE60;
  background-color: #27AE60;
}

<div
  className="c0"
  color="#27AE60"
/>
`;
